[gd_scene load_steps=29 format=2]

[ext_resource path="res://src/Levels/TroiaBase/ComboSystem/underbar.png" type="Texture" id=1]
[ext_resource path="res://src/Levels/TroiaBase/ComboSystem/VisualRanking.gd" type="Script" id=2]
[ext_resource path="res://src/Levels/TroiaBase/ComboSystem/bar_a.png" type="Texture" id=3]
[ext_resource path="res://src/Levels/TroiaBase/ComboSystem/combo_letter.res" type="SpriteFrames" id=4]
[ext_resource path="res://src/Levels/TroiaBase/ComboSystem/bar_c.png" type="Texture" id=5]
[ext_resource path="res://src/Levels/TroiaBase/ComboSystem/bar_b.png" type="Texture" id=6]
[ext_resource path="res://src/Levels/TroiaBase/ComboSystem/bar_d.png" type="Texture" id=7]
[ext_resource path="res://src/Levels/TroiaBase/ComboSystem/bar_s.png" type="Texture" id=8]
[ext_resource path="res://src/Levels/TroiaBase/ComboSystem/bar_e.png" type="Texture" id=9]
[ext_resource path="res://src/Effects/ShieldBreak/shieldbreak.res" type="SpriteFrames" id=10]
[ext_resource path="res://src/Sounds/Ridearmor - Startup.ogg" type="AudioStream" id=11]
[ext_resource path="res://src/Levels/TroiaBase/ComboSystem/time_monster_bonus.png" type="Texture" id=12]
[ext_resource path="res://src/Levels/TroiaBase/ComboSystem/numbers.png" type="Texture" id=13]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 12 )
region = Rect2( 16, 0, 8, 9 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 12 )
region = Rect2( 8, 0, 8, 9 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 8, 9 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "bonus",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "kills",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ) ],
"loop": false,
"name": "timer",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 13 )
region = Rect2( 0, 0, 6, 8 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 13 )
region = Rect2( 6, 0, 6, 8 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 13 )
region = Rect2( 12, 0, 6, 8 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 13 )
region = Rect2( 18, 0, 6, 8 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 13 )
region = Rect2( 24, 0, 6, 8 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 13 )
region = Rect2( 30, 0, 6, 8 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 13 )
region = Rect2( 36, 0, 6, 8 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 13 )
region = Rect2( 42, 0, 6, 8 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 13 )
region = Rect2( 48, 0, 6, 8 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 13 )
region = Rect2( 54, 0, 6, 8 )

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": false,
"name": "number",
"speed": 0.0
} ]

[node name="VisualRanking" type="Node2D"]
position = Vector2( 36, 38 )
script = ExtResource( 2 )
bar_s = ExtResource( 8 )
bar_a = ExtResource( 3 )
bar_b = ExtResource( 6 )
bar_c = ExtResource( 5 )
bar_d = ExtResource( 7 )
bar_e = ExtResource( 9 )

[node name="letter" type="AnimatedSprite" parent="."]
frames = ExtResource( 4 )
animation = "a"

[node name="underbar" type="Sprite" parent="."]
position = Vector2( 0, 45 )
texture = ExtResource( 1 )

[node name="time" type="AnimatedSprite" parent="underbar"]
self_modulate = Color( 1, 1, 1, 0.490196 )
position = Vector2( -25, 19 )
frames = SubResource( 4 )
animation = "timer"

[node name="number1" type="AnimatedSprite" parent="underbar/time"]
position = Vector2( 6, -2 )
frames = SubResource( 15 )
animation = "number"

[node name="number2" type="AnimatedSprite" parent="underbar/time"]
position = Vector2( 10, -3 )
frames = SubResource( 15 )
animation = "number"

[node name="number3" type="AnimatedSprite" parent="underbar/time"]
modulate = Color( 1, 1, 1, 0.486275 )
position = Vector2( 15, -4 )
frames = SubResource( 15 )
animation = "number"

[node name="number4" type="AnimatedSprite" parent="underbar/time"]
modulate = Color( 1, 1, 1, 0.486275 )
position = Vector2( 19, -5 )
frames = SubResource( 15 )
animation = "number"

[node name="kills" type="AnimatedSprite" parent="underbar"]
self_modulate = Color( 1, 1, 1, 0.490196 )
position = Vector2( 18, 7 )
frames = SubResource( 4 )
animation = "kills"

[node name="number1" type="AnimatedSprite" parent="underbar/kills"]
position = Vector2( 6, -2 )
frames = SubResource( 15 )
animation = "number"

[node name="number2" type="AnimatedSprite" parent="underbar/kills"]
position = Vector2( 10, -3 )
frames = SubResource( 15 )
animation = "number"

[node name="bar" type="Sprite" parent="."]
position = Vector2( -7, 45 )
z_index = 1
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 0, 0, 45, 29 )

[node name="break_vfx" type="AnimatedSprite" parent="."]
modulate = Color( 1, 1, 1, 0.670588 )
position = Vector2( -1, 3 )
z_index = 25
frames = ExtResource( 10 )
frame = 9
playing = true

[node name="sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )
volume_db = -4.0
max_distance = 600.0
bus = "SFX"
